2879
I guess this is mostly a documentation issue (afaict, Singleton's special status is only indirectly explained in the desugaring of existential values). Then again, shouldn't `Nothing <: Singleton`?
```scala
Welcome to Scala version 2.8.0.r0-b20091124141329 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_15).

scala> trait Test { type X <: Singleton }
<console>:4: error: lower bound Nothing does not conform to upper bound Singleton
       trait Test { type X <: Singleton }
                         ^
```
